# nextui

./: .dockerignore  .gitmodules  Cargo.toml  common.mk
.cargo/: config.toml
common/lvgl_configs/linux/: lv_conf.h
common/lvgl_configs/macos/: lv_conf.h
