[workspace]
members = [
    "nextui-views",
    "nextui-screenshots",
    "nextui-s3-sync",
    "nextui-s3-sync-lib",
]
resolver = "3"

[workspace.dependencies]
nextui-views = { path = "nextui-views" }
nextui-s3-sync-lib = { path = "nextui-s3-sync-lib" }

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

